tests/NormalTests/paczka1/small_fuzzy/70961711.err
Error in line 2: impRAHfLR8G A572 14,1
Error in line 9: R1bERZw S766 -1,5
